--- a/iterX.cabal
+++ b/iterX.cabal
@@ -20,6 +20,7 @@ library
                        IterX.Exception,
                        IterX.IterX,
                        IterX.Parser,
+                       IterX.Parser.Binary,
                        IterX.ReadableChunk,
                        IterX.StreamTrans,
                        IterX.Unsafe
@@ -32,6 +33,7 @@ library
                        mtl >=2.1 && <2.2,
                        monad-control >=0.3 && <0.4,
                        mono-traversable == 0.1.*,
-                       vector >= 0.10 && < 0.12
+                       vector >= 0.10 && < 0.12,
+                       word24
   hs-source-dirs:      src
   default-language:    Haskell2010
