--- a/iterX.cabal
+++ b/iterX.cabal
@@ -42,3 +42,23 @@ library
                        word24 >= 1 && < 2
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+benchmark bench.hs
+  default-language: Haskell2010
+  type: exitcode-stdio-1.0
+  hs-source-dirs: benchmarks
+  main-is:        Bench.hs
+
+  build-depends:
+      base,
+      iterX,
+      iteratee   >= 0.8.4.2 && < 0.10,
+      vector,
+      transformers-base >= 0.4,
+      listlike-instances,
+      criterion  >= 0.6 && < 0.9
+  ghc-options: -O2
+
+source-repository head
+  type:                git
+  location:            git://github.com/JohnLato/iterx.git
