--- a/iterX.cabal
+++ b/iterX.cabal
@@ -19,6 +19,7 @@ library
                        IterX.Core,
                        IterX.Exception,
                        IterX.Fusion.Fold,
+                       IterX.Fusion.Transforms,
                        IterX.Fusion.Unfold,
                        IterX.Fusion,
                        IterX.IterX,
