Fusion: add more transforms

--- a/iterX.cabal
+++ b/iterX.cabal
@@ -20,6 +20,7 @@ library
                        IterX.Exception,
                        IterX.Fusion.Fold,
                        IterX.Fusion.Transforms,
+                       IterX.Fusion.Transforms2,
                        IterX.Fusion.Unfold,
                        IterX.Fusion,
                        IterX.IterX,
