--- a/iterX.cabal
+++ b/iterX.cabal
@@ -32,10 +32,8 @@ library
   build-depends:       base >=4.6 && <4.7,
                        attoparsec >=0.10 && <0.11,
                        bytestring >=0.10 && <0.11,
-                       lifted-base >=0.2 && <0.3,
-                       transformers-base >=0.4 && <0.5,
+                       exceptions >=0.3  && <0.4,
                        mtl >=2.1 && <2.2,
-                       monad-control >=0.3 && <0.4,
                        mono-traversable >= 0.1 && < 0.3,
                        profunctors >= 3 && < 5,
                        vector >= 0.10 && < 0.12,
