--- a/iterX.cabal
+++ b/iterX.cabal
@@ -33,6 +33,7 @@ library
                        attoparsec >=0.10 && <0.12,
                        bytestring >=0.10 && <0.11,
                        exceptions >=0.3  && <0.4,
+                       transformers >= 0.3 && <0.4,
                        mtl >=2.1 && <2.2,
                        mono-traversable >= 0.1 && < 0.3,
                        profunctors >= 3 && < 5,
